<resources>
    <string name="app_name">نون العلمية</string>
    <string name="drawer_open">فتح</string>
    <string name="drawer_close">إغلاق</string>
    <string name="youtube_error">حدث خطأ أثنائ تهيئة الفيديو!</string>
    <string name="sound_error">حدث خطأ أثناء تحميل الملف الصوتي!</string>
    <string name="open_in_browser">فتح في المتصفح</string>
    <string name="share">مشاركة</string>
    <string name="site_name">مجموعة نون العلمية</string>


    <string name="comments">التعليقات</string>
    <string name="fontSize">حجم الخط :</string>
    <string name="maxFontSizeError">هذا أقصى حجم ممكن!</string>
    <string name="minFontSizeError">هذا أقل حجم ممكن!</string>
    <string name="addToFavorite">إضافة للمفضلة</string>
    <string name="no_comments">لا توجد تعليقات</string>
    <string name="settings">الإعدادات</string>
    <string name="whoAreWe">من نحن</string>
    <string name="logoText">نون العلمية\n لأن العلم يأتي أولاَ</string>
    <string name="followUsOnTwitter">تابعنا على تويتر</string>
    <string name="youtubeChanel">قناتنا على يوتيوب</string>
    <string name="soundcloudAccount">حسابنا على SoundCloud</string>
    <string name="no_posts">لا توجد مقالات!</string>
    <string name="posts_by">مقالات بواسطة :</string>
    <string name="search">بحث</string>


    <string name="noFavorites">لا توجد مقالات مفضلة!</string>
    <string name="favorite">المفضلة</string>
    <string name="noon_members">أعضاء نون</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="join_us">انضم لنا</string>
    <string name="categories">التصنيفات</string>
    <string name="load_more">عرض المزيد</string>
    <string name="recent_articles">آخر المقالات</string>
    <string name="no_internet_connection">لا يوجد اتصال بالإنترنت!</string>
    <string name="ok">حسناً</string>
    <string name="no_internet_connection_message">لا يوجد إتصال بالإنترنت، لن يعمل التطبيق لشكل صحيح!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
