<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single"
        android:id="@+id/categoriesItems"
        android:orderInCategory="0">

    </group>


    <group
        android:id="@+id/mainItems"
        android:orderInCategory="1">

        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:title="@string/whoAreWe" />
        <item
            android:id="@+id/twitter"
            android:icon="@drawable/twitter"
            android:title="@string/followUsOnTwitter" />
        <item
            android:id="@+id/youtube"
            android:icon="@drawable/youtube"
            android:title="@string/youtubeChanel" />
        <item
            android:id="@+id/soundcloud"
            android:icon="@drawable/soundcloud"
            android:title="@string/soundcloudAccount" />

    </group>


</menu>