<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="org.n_scientific.scientificnoon.ui.main.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/app_bar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <org.n_scientific.scientificnoon.ui.views.NoonButton
                            android:id="@+id/btnNoonMembers"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/rounded_accent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="6dp"
                            android:text="@string/noon_members"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <org.n_scientific.scientificnoon.ui.views.NoonButton
                            android:id="@+id/btnContactUs"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/rounded_accent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="6dp"
                            android:text="@string/contact_us"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                        <org.n_scientific.scientificnoon.ui.views.NoonButton
                            android:id="@+id/btnJoinUs"
                            style="@style/Widget.AppCompat.Button.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:background="@drawable/rounded_accent"
                            android:minHeight="0dp"
                            android:minWidth="0dp"
                            android:paddingBottom="6dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="6dp"
                            android:text="@string/join_us"
                            android:textColor="@android:color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </HorizontalScrollView>

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/logo" />

                <org.n_scientific.scientificnoon.ui.views.NoonTextView
                    android:id="@+id/txtAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="12sp"
                    android:paddingBottom="64dp"
                    android:textSize="16sp" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_view"
        app:menu="@menu/navigation_view_menu">

        <ProgressBar
            android:id="@+id/categoriesProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

